@@ -14,6 +14,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       start and job end as well.
   e - TRQ-2843. Add the qmgr setting dont_write_nodes_file to make it so that nodes
       cannot be edited dynamically
+  f - TRQ-2897. Add the ability to adopt running processes into a job with pbs_track.
 
 
 5.1.1
